--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,9 @@
   </form>
 </div>
 
+<div class="demands-access-btn">
+  <a href="/demands" style="text-decoration: none;" class="btn create" id="btn-demand-home">Access Print Demands</a>
+</div>
 
 <div class="product-container">
   <h4> Recently Added On Print3D</h4>
