fix mapbox + ordre croissant demands

--- a/app/views/pages/users.html.erb
+++ b/app/views/pages/users.html.erb
@@ -17,5 +17,5 @@
     </div>
 <div class="buttons-container">
   <button type="button" class="btn btn-light text-primary">Printers</button>
-  <button type="button" class="btn btn-light text-primary">Clients</button>
+  <button type="button" class="btn btn-light text-danger">Clients</button>
 </div>
