--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="search-bar">
   <form class="d-flex" action="/products" accept-charset="UTF-8" method="get" style="width:100%">
-    <input type="text" name="query" id="query" value="" class="input-search" style="width:100%" placeholder="Find a product">
+    <input type="text" name="query" id="query" value="" class="input-search" style="width:100%" placeholder="Browse our 2,308,870 3D files">
     <button type="submit" name="commit" class="loupe" data-disable-with="Search">
       <i class="fas fa-search" id="search-icon"></i>
     </button>
