--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
 
-  <h1>Browse demands around you</h1>
+  <h1>→ Demands around you</h1>
     <div class="map-card">
       <div style="width: 100%; height: 40vh;"
         data-controller="mapbox"
